--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,16 @@
     url('font/PPGoshaSans-Bold.ttf') format('truetype');
 }
 
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
+
 h1, h2, h3 {
     font-family: "Gosha Sans Bold";
     color: #FF772C;
@@ -24,3 +34,46 @@ span, p {
 .jet-black {
     color: #222628;
 }
+
+.chat-container {
+    width: 60%;
+    height: 70%;
+    border: 1px solid #222628;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.chat-container .send-message {
+    display: flex;
+    padding: 24px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.chat-container .send-message input {
+    outline: none;
+    padding: 12px;
+    border: 1px solid #747474;
+    border-radius: 4px;
+    margin-right: 2px;
+    font-size: 16px;
+    flex: 1;
+}
+
+.chat-container .send-message button {
+    padding: 12px 18px;
+    border: none;
+    background-color: #FF772C;
+    color: #fff;
+    font-size: 16px;
+    outline: none;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+    transition: 0.2s all;
+
+    &:active {
+        transform: scale(0.97);
+    }
+}
+
